# fast-mult-presentation

./: README.md  fast-mult-presentation.cabal  stack.yaml
app/: FactFast.hs  FactSlow.hs  FactSlowFaster.hs
src/: Lib.hs
