name:                fast-mult-presentation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/clintonmead/fast-mult-presentation#readme
license:             BSD3
license-file:        LICENSE
author:              Clinton Mead
maintainer:          clintonmead@gmail.com
copyright:           Copyright: (c) 2017 Clinton Mead
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, integer-gmp
  default-language:    Haskell2010

executable fact-slow
  hs-source-dirs:      app
  main-is:             FactSlow.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , fast-mult-presentation
  default-language:    Haskell2010

executable fact-fast
  hs-source-dirs:      app
  main-is:             FactFast.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , fast-mult-presentation
  default-language:    Haskell2010

executable fact-slow-faster
  hs-source-dirs:      app
  main-is:             FactSlowFaster.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , fast-mult-presentation
                     , fast-mult >= 0.1.0.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clintonmead/fast-mult-presentation
